Make SRV config lookup check also TXT records for CalDAV/CardDAV
When using the above feature, the following are not clear from the wording of the lookup options:
- Does "Look up for a CalDAV/CardDAV server" actually mean "use .well-known paths"? Since SRV/TXT are also a *DAV lookup method.
- "Look up *DAV" doesn't specify what server it will contact - the DAV server? GNOME's provider directory?
Edited by Milan Crha