I#240 - Make SRV config lookup check also TXT records for CalDAV/CardDAV

Closes https://gitlab.gnome.org/GNOME/evolution/issues/240